# python-training

./: .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  config.py
app/models/: __init__.py  user.py
app/repositories/: __init__.py  users.py
app/routes/: __init__.py  users.py
app/services/: __init__.py  users.py
app/validators/: __init__.py  users.py
bruno/: bruno.json  collection.bru
bruno/Users/: Users - Create.bru  Users - Delete.bru  Users - Get.bru
docs/: exercise1-hr-api.md
hr_api/: app.py
hr_api/models/: company.py  employee.py  preset.py  user.py
hr_api/repositories/: base.py  company_repo.py
hr_api/routes/: company.py
hr_api/tests/: test_models.py  test_repo_company.py
hr_api/tests/manuel/: test_validation.py
hr_api/validation/: schema.py
