[tool.poetry]
package-mode = false

[project]
name = "training"
version = "0.1.0"
description = ""
authors = [
    {name = "MaximeCorsonTabesto",email = "maxime.corson@deliverect.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cerberus (>=1.3.8,<2.0.0)",
    "events (>=0.5,<0.6)",
    "flask (>=3.1.2,<4.0.0)",
    "pymongo (>=4.15.4,<5.0.0)",
    "simplejson (>=3.20.2,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
